ejercicios/calculadora2/jcc_files/calc_enteros.java
/* Generated By:JavaCC: Do not edit this line. calc_enteros.java */
package traductor;

public class calc_enteros implements calc_enterosConstants {
    public static void main(String[] args) {
        calc_enteros parser;

        try {
                if(args.length == 0) {
                                parser = new calc_enteros(System.in);
                        }
                        else {
                    parser = new calc_enteros(new java.io.FileInputStream(args[0]));
                        }
                        //Programa es el símbolo inicial de la gramática
                        parser.calc();
                }
                catch (java.io.FileNotFoundException e) {
                        System.err.println ("Fichero " + args[0] + " no encontrado.");
                }
                catch (TokenMgrError e) {
                System.err.println("LEX_ERROR: " + e.getMessage());
        }
        catch (ParseException e) {
            System.err.println("Svoid_ERROR: " + e.getMessage());
        }
        catch(Exception e) {
                        System.err.println("Finalizo traducci\u00f3n por detecci\u00f3n de error no controlado: \n\t"
                                               + e.getMessage());
                }
    }

//---------------------------------------------------------
//calc: (dec_constantes)? (dec_variables)? (instrucciones)+
  static final public void calc() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tCONST:
      dec_constantes();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tVAR:
      dec_variables();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      instrucciones();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tWRITE:
      case tID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
    }
  }

//dec_constantes: (dec_constante)+
  static final public void dec_constantes() throws ParseException {
    label_2:
    while (true) {
      dec_constante();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCONST:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
    }
  }

//dec_constante: < tCONST > < tASS > < tNUM > < tPC >
  static final public void dec_constante() throws ParseException {
    jj_consume_token(tCONST);
    jj_consume_token(tID);
    jj_consume_token(tASS);
    jj_consume_token(tNUM);
    jj_consume_token(tPC);
  }

//dec_variables: (dec_variable)+
  static final public void dec_variables() throws ParseException {
    label_3:
    while (true) {
      dec_variable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tVAR:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
    }
  }

//dec_variable:  < tVAR > < tID > < tPC >
  static final public void dec_variable() throws ParseException {
    jj_consume_token(tVAR);
    jj_consume_token(tID);
    jj_consume_token(tPC);
  }

//instrucciones: (instruccion)+
  static final public void instrucciones() throws ParseException {
    label_4:
    while (true) {
      instruccion();
      jj_consume_token(tPC);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tWRITE:
      case tID:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(0);
  }

  static final public void instruccion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tID:
      inst_asignacion();
      break;
    case tWRITE:
      inst_escribir();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void inst_asignacion() throws ParseException {
    jj_consume_token(tID);
    jj_consume_token(tASS);
    expresion();
  }

  static final public void inst_escribir() throws ParseException {
    jj_consume_token(tWRITE);
    expresion();
  }

  static final public void expresion() throws ParseException {
    termino();
    expresion_plus();
  }

  static final public void expresion_plus() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tMAS:
      jj_consume_token(tMAS);
      termino();
      expresion_plus();
      break;
    case tMENOS:
      jj_consume_token(tMENOS);
      termino();
      expresion_plus();
      break;
    default:
      jj_la1[7] = jj_gen;

    }
  }

  static final public void termino() throws ParseException {
    factor();
    termino_plus();
  }

  static final public void termino_plus() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tPROD:
      jj_consume_token(tPROD);
      factor();
      termino_plus();
      break;
    case tDIV:
      jj_consume_token(tDIV);
      factor();
      termino_plus();
      break;
    default:
      jj_la1[8] = jj_gen;

    }
  }

  static final public void factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tAP:
      jj_consume_token(tAP);
      expresion();
      jj_consume_token(tCP);
      break;
    case tID:
      jj_consume_token(tID);
      break;
    case tNUM:
      jj_consume_token(tNUM);
      break;
    case tMAS:
      jj_consume_token(tMAS);
      factor();
      break;
    case tMENOS:
      jj_consume_token(tMENOS);
      factor();
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public calc_enterosTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[10];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x200,0x400,0x2800,0x200,0x400,0x2800,0x2800,0x18000,0x60000,0x9a100,};
   }

  /** Constructor with InputStream. */
  public calc_enteros(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public calc_enteros(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new calc_enterosTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public calc_enteros(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new calc_enterosTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public calc_enteros(calc_enterosTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(calc_enterosTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[22];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 10; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 22; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
